<resources>
    <string name="app_name">Shopping list</string>
    <string name="action_settings">Settings</string>
    <string name="adicionar_produto">Products</string>
    <string name="lista_total">My Lists</string>
    <string name="title_activity_pagina_add_produto">Products</string>
    <string name="title_activity_lista_total">My Lists</string>
    <string name="title_activity_adicionar_produto">Products</string>
    <string name="todas_as_listas">My Lists</string>
    <string name="criar_lista">Create List</string>
    <string name="title_activity_criar_lista">Create List</string>
    <string name="mercearia">Grocery Store</string>
    <string name="bricolage">Do It Yourself</string>
    <string name="vestu_rio">Clothing</string>
    <string name="title_activity_criar_lista_mercearia">Create list</string>
    <string name="nome_para_a_lista">Name for the list:</string>
    <string name="data_de_cria_o">Creation date</string>
    <string name="guardar">Save</string>
    <string name="cancelar">Cancel</string>
    <string name="escreva_aqui">Write here</string>
    <string name="nome_obrigatorio">Required list name</string>
    <string name="caracteres">Contains special characters</string>
    <string name="lista_criada">Created List</string>
    <string name="carregou_para_criar_lista">Loaded to create a new playlist</string>
    <string name="carregou_para_adicionar_produto">Loaded to products</string>
    <string name="carregou_para_ver_lista_compras">Loaded to view shopping lists</string>
    <string name="numero_maximo_de_caracters">25 Characters Exceeded</string>
    <string name="numero_minimo_de_caracters">Contain less than 3 characters</string>
    <string name="title_activity_minhas_listas">My Lists</string>
    <string name="nome_das_listas">List names:</string>
    <string name="editar_lista">Edit List</string>
    <string name="apagar_lista">Delete List</string>
    <string name="title_activity_editar_lista">Edit List</string>
    <string name="novo_nome">New name</string>
    <string name="nome">Name</string>
    <string name="nome_da_lista_a_editar">List name to edit:</string>
    <string name="title_activity_apagar_lista">Delete list</string>
    <string name="eleminar">Delete</string>
    <string name="nome_da_lista">List name</string>
    <string name="nome_da_lista_a_apagar">Name of the list to delete:</string>
    <string name="carregar_botao_apagar">Uploaded to erase</string>
    <string name="carregar_botao_editar_lista">Uploaded to edit list</string>
    <string name="lista_alterada">Changed list</string>
    <string name="data">Date</string>
    <string name="lista_apagada">List deleted successfully</string>
    <string name="novo_nome_para_a_lista">New name for the list:</string>
    <string name="inserir">Insert</string>
    <string name="editar">Edit</string>
    <string name="eliminar">Delete</string>
    <string name="data_de_criao">Creation date:</string>
    <string name="data_de_cria_o_nova">" New creation date:"</string>
    <string name="escolher">To choose</string>
    <string name="categorias_de_produtos">" Product Categories"</string>
    <string name="title_activity_inserir">Insert</string>
    <string name="title_activity_categorias">Categories</string>
    <string name="todas_as_categorias">All categories:</string>
    <string name="carregou_ver_todas_as_categorias">" Uploaded to view all product categories"</string>
    <string name="title_activity_inserir_produto">Insert Product</string>
    <string name="title_activity_editar_produto">Edit Product</string>
    <string name="title_activity_eliminar_produto">Delete Product</string>
    <string name="carregou_para_adicionar_produtoo">" Uploaded to add a product"</string>
    <string name="carregou_para_editar_produto">Loaded to edit product</string>
    <string name="carregou_para_eliminar_produto">" Loaded to delete product"</string>
    <string name="nome_do_produto">Product name:</string>
    <string name="categoria">Category:</string>

    <string-array name="Categorias">
        <item>Mercearia</item>
        <item>Bricolagem</item>
        <item>Vestuario</item>
    </string-array>
    <string name="escolher_lista_para_adicionar_produto">" Select list to add / edit / delete product:"</string>
    <string name="quantidade">Amount</string>
    <string name="quantidadee">Amount:</string>
    <string name="data_em_que_faltou">"Date you were missing: "</string>
    <string name="quantidade_obrigatoria">" Required quantity"</string>
    <string name="produto_inserido_com_sucesso">Product inserted successfully</string>
    <string name="quantidade_invalida">" Invalid amount"</string>
    <string name="produto_eliminado_toast">" Product successfully deleted!"</string>
    <string name="novo_nome_produto">New name:</string>
    <string name="nova_categoria">New category:</string>
    <string name="nova_quantidade">New amount:</string>
    <string name="nova_data">New date:</string>
    <string name="title_activity_inserir_categoria">" Insert Category"</string>
    <string name="title_activity_editar_categoria">Edit Category</string>
    <string name="title_activity_eliminar_categoria">Delete Category</string>
    <string name="carregou_para_inserir_categoria">" Uploaded to insert category"</string>
    <string name="carregou_para_editar_categoria">" Uploaded to edit category"</string>
    <string name="carregou_para_eliminar_categoria">" Loaded to delete category"</string>
    <string name="nome_da_categoria">" Category name:"</string>
    <string name="categoria_criada">" Category created successfully!"</string>
    <string name="categoria_guardada">" Category saved successfully!"</string>
    <string name="categoria_eliminada_com_sucesso">" Category deleted successfully!"</string>
    <string name="nome_obrigatorio_geral">"Name required! "</string>
    <string name="title_activity_editar_produto2">"Edit Product "</string>
    <string name="Erro">Error</string>
    <string name="nome_da_lista_a_adicionar">Name of the list to create:</string>
    <string name="erro">error</string>
    <string name="nome_da_listaaa">List name:</string>
    <string name="data_obrigatoria">Date obrigatory</string>
    <string name="data_invalida">Invalid date</string>
    <string name="formato_da_data_invalido">Invalid date!</string>
    <string name="produto_alterado_com_sucesso">Produto successfully update!</string>
    <string name="categoria_eleminada">Categoria eliminada com sucesso</string>
    <string name="nao_possivel_eleminar_categoria">Error</string>
    <string name="data_em_que_faltouu">"Date you were missing: "</string>
    <string name="nome_da_listaa">List name:</string>
</resources>
